--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <script type="module" src="./main.js" defer></script>
   </head>
@@ -18,7 +22,7 @@
       </div>
       <ul class="gallery"></ul>
 
-      <div class="danger messageContainer">
+      <!-- <div class="danger messageContainer">
         <div class="warning">
           <img src="./img/warning.png" alt="warning icon" />
         </div>
@@ -27,9 +31,11 @@
           again!
         </p>
         <div class="close"><img src="./img/close.png" alt="close icon" /></div>
-      </div>
+      </div> -->
     </main>
-
+    <div class="iziToast-icon">
+      <img src="./img/warning.png" alt="warning icon" />
+    </div>
     <load src="./partials/footer.html" />
   </body>
 </html>
