--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
         <input class="searchInput" type="text" name="searchInput" />
         <button class="searchBtn">Search</button>
       </div>
+      <p class="loading">Loading products...</p>
       <ul class="gallery"></ul>
 
       <!-- <div class="danger messageContainer">
